[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/menu_font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu/ui_game_menu_button_clicked.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/menu_select.ogg" type="AudioStream" id=3]
[ext_resource path="res://MainMenu/ui_game_menu_button_base.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/TimeoutMenu.gd" type="Script" id=5]
[ext_resource path="res://MainMenu/ui_game_menu_base.png" type="Texture" id=6]
[ext_resource path="res://Fonts/lose_font.tres" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -15
font_data = ExtResource( 1 )

[node name="TimeoutMenu" type="Control"]
pause_mode = 2
margin_right = 384.0
margin_bottom = 400.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Base" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 384, 410 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 6 )
region_rect = Rect2( -4.34294, -3.10542, 326.486, 325.459 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuStuff" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 20.0
margin_right = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenuTitle" type="Label" parent="MenuStuff"]
margin_right = 320.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "RAN OUT OF 
TIME"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuStuff"]
margin_top = 79.0
margin_right = 320.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 20 )

[node name="RestartLevel" type="TextureButton" parent="MenuStuff"]
margin_top = 103.0
margin_right = 320.0
margin_bottom = 228.0
size_flags_horizontal = 5
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="MenuStuff/RestartLevel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "RESTART LEVEL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MenuStuff"]
margin_top = 232.0
margin_right = 320.0
margin_bottom = 357.0
size_flags_horizontal = 5
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="MenuStuff/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "EXIT GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="pressed" from="MenuStuff/RestartLevel" to="." method="_on_RestartLevel_pressed"]
[connection signal="pressed" from="MenuStuff/ExitButton" to="." method="_on_ExitButton_pressed"]
